<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_movies"
        android:title="@string/movies"
        android:icon="@drawable/ic_round_movie" />
    <item android:id="@+id/action_tvshow"
        android:title="@string/tv_show"
        android:icon="@drawable/ic_round_live_tv" />
</menu>