<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homeActivity"
    tools:context=".ui.HomeActivity">

    <FrameLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/frameLayoutHome"
        app:layout_constraintBottom_toTopOf="@id/bottomNavbarHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavbarHome"
        app:menu="@menu/bottom_navbar_menu"
        app:itemTextAppearanceActive="@style/BottomNavigationViewHome"
        app:itemTextAppearanceInactive="@style/BottomNavigationViewHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemIconTint="@drawable/bottom_nav_icon_selector"
        app:itemTextColor="@drawable/bottom_nav_icon_selector"/>
</androidx.constraintlayout.widget.ConstraintLayout>